Hello
Put changelog in plain text please
Make sure to clear this after each release

Put changelog here:
-----------------
- Added config modification tools
    - Config instances will have to be publicly available to be able to be modified.
- Removed FrozenLibConfigOverrides in favor of the new config modification tools
    - Breaking change, mods using this will need to update.
- Lowered Fabric Loader dependency to 0.14.22